improve description of undergraduate and chairperson work

--- a/data/12-chair-service.tex
+++ b/data/12-chair-service.tex
@@ -1,15 +1,15 @@
 \section{Chairperson Service and Highlights}
 
-\cvlistitem{Led growth of full-time faculty from 14 to 19 full-time members (13 tenure stream and 6 teaching stream) as of Spring 2025}
+\cvlistitem{Led growth of full-time faculty from 14 to 19 full-time members (13 tenure professor stream and 6 teaching professor stream) as of AY 2025-2026}
 
-\cvlistitem{Obtained administrative approval and launched new PhD Program in Fall 2023 with 12 funded students within 2.5 years (4 work with me)}
+\cvlistitem{Obtained administrative approval and launched new PhD Program in Fall 2023 with 12 funded students since 2022 (4 work with me)}
 
 \cvlistitem{Obtained administrative approval and launched College of Arts and Sciences Center for Cybersecurity in Fall 2024}
 
-\cvlistitem{Obtained administrative approval to launch new MS in Cybersecurity Program in Fall 2025}
+\cvlistitem{Obtained administrative approval and launched new MS in Cybersecurity Program in Fall 2025}
 
-\cvlistitem{Obtained administrative approval to launch Minor in Artificial Intelligence in Fall 2025}
+\cvlistitem{Obtained administrative approval and launched Minor in Artificial Intelligence in Fall 2025}
 
-\cvlistitem{Collaborated with the Business School to obtain approval to launch Minor in Applied Artificial Intelligence in Business in Fall 2025}
+\cvlistitem{Collaborated with the Business School to obtain approval and launched Minor in Applied Artificial Intelligence in Business in Fall 2025}
 
-\cvlistitem{Awaiting approval for Interdisciplinary Minor in Artificial Intelligence and Human Flourishing with Department of Philosophy in Fall 2026}
+\cvlistitem{Collaborated with the Department of Philosophy to obtain approval to launch Interdisciplinary Minor in Artificial Intelligence and Human Flourishing in Fall 2026}
