--- a/data/14-education.tex
+++ b/data/14-education.tex
@@ -7,7 +7,21 @@
 \cventry{1988-1990}{MS}{Illinois Institute of Technology}{Chicago, IL}{Computer Science}
 {\vspace{3pt}\underline{Masters Research:} \textit{A Simulation of Demand-Driven Dataflow: Translation from Lucid into Message Driven Computing (MDC) Language (a software dataflow system for distributed multicore systems)}}{\vspace{3pt}}
 
-\cventry{1986-1988}{BS}{Lewis University}{Romeoville, IL}{Computer Science and Physics (Double Major); Mathematics Minor}
-{\vspace{4pt}\underline{Undergraduate Research:} \textit{Apt Data Structures Library for the C Programming Language and LL(k)-style Parser Generator}, \textit{Data-Parallel C Compiler Code Generator}, \textit{Weak Interactions Physics Smart Acquisituon System (WISAS)}, and \textit{Coupled Oscillations in One Dimension}}{\vspace{3pt}}.
+\cventry{1986-1988}{BS}{Lewis University}{Romeoville, IL}{Computer Science with Minor in Mathematics}{}
+{\vspace{3pt}
+\underline{Undergraduate Research:}
+\textit{Apt Data Structures Library for the C Programming Language and LL(k)-style Parser Generator}
+and
+\textit{Data-Parallel C Compiler Code Generator}
+}
+{\vspace{3pt}}
+
+\cventry{1986-1988}{BS}{Lewis University}{Romeoville, IL}{Physics with Minor in Mathematics}
+{\vspace{3pt}
+\underline{Undergraduate Research:}
+\textit{Weak Interactions Physics Smart Acquisituon System (WISAS)}
+and
+\textit{Coupled Oscillations in One Dimension}}
+{\vspace{3pt}}
 
 %\cventry{2022-Present}{BM}{Loyola University Chicago}{Chicago, IL}{Music/Jazz Performance [in progress]}{\vspace{3pt}}
