add lifelong learning section

--- a/data/14-education.tex
+++ b/data/14-education.tex
@@ -1,6 +1,5 @@
 \section{Academic Preparation}
 
-%\cventry{1996--1998}{Postdoctoral Computer Scientist}{Argonne National Laboratory}{Argonne, IL}{}{\vspace{3pt}}
 
 \cventry{1990-1995}{PhD}{Illinois Insititute of Technology}{Chicago, IL}{Computer Science}{\vspace{3pt}\underline{Doctoral Dissertation:} \textit{An Enhanced Actors Model and Programming Environment for Parallel and Distributed Processing}}{\vspace{3pt}}
 
@@ -24,4 +23,10 @@ and
 \textit{Coupled Oscillations in One Dimension}}
 {\vspace{3pt}}
 
-%\cventry{2022-Present}{BM}{Loyola University Chicago}{Chicago, IL}{Music/Jazz Performance [in progress]}{\vspace{3pt}}
+\section{Lifelong Learning}
+
+\cventry{2026-Present}{BA}{Loyola University Chicago}{Chicago, IL}{Music, Concentration in Jazz Studies (Piano)}{\vspace{3pt}}
+
+\cventry{2022-2025}{Non-Degree}{Loyola University Chicago}{Chicago, IL}{Music, Jazz Piano and Combo}{\vspace{3pt}}
+
+\cventry{2018-2025}{Non-degree}{Old Town School of Folk Music}{Chicago, IL}{Music, Jazz Performance Ensemble}{\vspace{3pt}}
